--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <img class="bayes" src="images/bayes theorem.png">
         
         <p id="pg2" class="sec_exp">
-            The left term represents the probability that a player plays rock given that their previous move was scissors. We expand this using Bayes', and in doing so, have established a perfect expression to which we can apply bayesian inference.
+            The left term represents the probability that a player plays rock given that their previous move was scissors. We expand this using Bayes', and in doing so, have established a perfect expression to which we can apply Bayesian Inference.
             In short, the more that a player plays, the more moves we have to go off of when calculating our probabilities. After 50 games (or more), it is only natural that we will have conditional probabilities to analyze. For example, if
             we want to know the probability that a player's previous move was scissors given that their current move was rock, we simply (by the definition of conditional probability) count all of the times our player picked rock after scissors, over the total amount of times they picked rock.
             We can call this our evidence (or observations), which would be the P(E | B) term. Our prior is also relatively simple.
